--- a/maket_№3_Wake&Bake/css/reset.css
+++ b/maket_№3_Wake&Bake/css/reset.css
@@ -17,3 +17,4 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
 a{color:inherit;}
 address{font-style: normal;}
+summary{list-style: none;}
