--- a/maket_№3_Wake&Bake/css/style.css
+++ b/maket_№3_Wake&Bake/css/style.css
@@ -593,11 +593,103 @@
     justify-content: space-between;
     margin-bottom: 60px;
     align-items: center;
+    gap: 15px;
 }
 
 .program__text {
     max-width: 374px;
 }
+
+/* ------------------------------ */
+
+.program__tab-content {
+    margin-bottom: 40px;
+}
+
+.program__bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+.program__action {
+    display: grid;
+    grid-template: repeat(3, auto) /1.65fr 1fr;
+    max-width: 500px;
+    gap: 40px;
+}
+
+.program__action:last-child {}
+
+.program__discount {
+    font-size: 20px;
+    background-color: var(--color-bg-button);
+    border-radius: var(--border-radius);
+    padding: 40px;
+    grid-row: 1/3;
+}
+
+.program__discount:first-child {}
+
+.program__discount-value {
+    font-family: var(--second-family);
+    font-size: 74px;
+    line-height: .82;
+    color: var(--color-ac-orange);
+    margin: 0 0 7px 13%;
+    transform-origin: 0 0;
+    animation: sales .9s linear infinite alternate;
+}
+
+@keyframes sales {
+    0% {
+        /* font-size: 74px; */
+        transform: scale(1);
+        color: var(--color-ac-orange);
+    }
+
+    100% {
+        transform: translateX(3%) scale(1.1);
+        /* font-size: 82px; */
+        color: #ff9138;
+    }
+}
+
+.program__discount span {
+    display: block;
+    font-size: 16px;
+    margin-left: 35%;
+}
+
+.program__price-text {
+    line-height: 1.6;
+    text-transform: uppercase;
+    color: var(--color-ac-pink);
+    margin-bottom: 5px;
+}
+
+.program__price-value {
+    font-size: 32px;
+    line-height: .9;
+    color: var(--color-text);
+    font-family: var(--second-family);
+}
+
+.program__price-value--big {
+    color: var(--color-text-head);
+    font-size: 50px;
+}
+
+.program__button {
+    grid-column: 1/3;
+}
+
+.program__price-img img {
+    width: 100%;
+}
+
+/* -------------------- */
 
 .tab-controls {
     display: flex;
@@ -616,6 +708,7 @@
     max-height: 52px;
     padding: 14px 30px;
     transition: all 1s;
+    white-space: nowrap;
 }
 
 .tab-controls__link:hover {
@@ -658,20 +751,25 @@
     padding: 41px 30px;
     width: 100%;
     background: transparent;
+    text-align: left;
 
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
 
     font-family: var(--second-family);
     font-size: 42px;
     line-height: .9;
     color: var(--color-text-head);
+    transition: var(--transition);
 }
 
 .accordion-list__control-title {
     /* display: inline-block; */
+}
 
+.accordion-list__item--opened .accordion-list__control{
+    padding-bottom: 20px;
 }
 
 .accordion-list__control-icon {
@@ -685,26 +783,30 @@
     flex-shrink: 0;
     transition: var(--transition);
 }
-.accordion-list__control-icon svg{
+
+.accordion-list__control-icon svg {
     margin-left: 2px;
 }
-.accordion-list__control-icon path{
+
+.accordion-list__control-icon path {
     transition: var(--transition);
 }
 
-.accordion-list__control:hover .accordion-list__control-icon{
+.accordion-list__control:hover .accordion-list__control-icon {
     transform: rotate(90deg);
     background: var(--color-ac-orange);
 }
-.accordion-list__control:hover .accordion-list__control-icon path{
+
+.accordion-list__control:hover .accordion-list__control-icon path {
     fill: var(--color-body);
 }
 
-.accordion-list__item--opened .accordion-list__control-icon{
+.accordion-list__item--opened .accordion-list__control-icon {
     transform: rotate(90deg);
     background: var(--color-ac-orange);
 }
-.accordion-list__item--opened .accordion-list__control-icon path{
+
+.accordion-list__item--opened .accordion-list__control-icon path {
     fill: var(--color-body);
 }
 
@@ -716,8 +818,9 @@
     overflow: hidden;
     transition: var(--transition);
 }
-.accordion-list__item--opened .accordion-list__content{
-    
+
+.accordion-list__item--opened .accordion-list__content {
+    max-height: none;
 }
 
 
@@ -742,7 +845,7 @@
 .accordion-content__list {}
 
 .accordion-content__item {
-    /* display: flex; */
+    display: flex;
     margin-bottom: 20px;
 }
 
@@ -752,6 +855,7 @@
 
 .accordion-content__icon {
     display: inline-flex;
+    flex-shrink: 0;
     width: 24px;
     height: 24px;
     border-radius: 50%;
@@ -759,16 +863,12 @@
     /* padding: 7.2px; */
     align-items: center;
     justify-content: center;
-    margin-right: 4px;
+    margin-right: 8px;
 }
-
-
 
 .accordion-content__text {
     max-width: 274px;
 }
-
-
 
 
 
@@ -999,17 +1099,29 @@
         margin-top: 30px;
     }
 
-    /* =========== */
-    .footer__inner {
-        justify-content: space-between;
-        grid-template: repeat(2, auto) / repeat(3, auto);
+    /* ---------------- */
+    .program__top {
+        flex-direction: column;
+        align-items: stretch;
     }
 
-    .footer__col:last-child {
-        grid-column: 1 / -1;
-        text-align: center;
+    .tab-controls {
+        flex-wrap: wrap;
     }
 }
+
+/* =========== */
+.footer__inner {
+    justify-content: space-between;
+    grid-template: repeat(2, auto) / repeat(3, auto);
+}
+
+.footer__col:last-child {
+    grid-column: 1 / -1;
+    text-align: center;
+}
+
+
 
 @media(max-width:1100px) {
     .about__body {
@@ -1022,6 +1134,13 @@
 
     .about__grid {
         grid-column: 1/-1;
+    }
+}
+
+@media(max-width:1000px) {
+    .accordion-list__control{
+        padding: 25px 30px;
+        font-size: 35px;
     }
 }
 
@@ -1120,6 +1239,15 @@
     .about__grid {
         grid-template: none;
     }
+
+    /* ---------- */
+    .tab-controls {
+        gap: 10px;
+    }
+
+    .tab-controls-link {
+        padding: 6px 20px;
+    }
 }
 
 @media(max-width:600px) {
@@ -1157,6 +1285,20 @@
         max-width: none;
         border-radius: 0;
         padding: 10px 15px;
+    }
+
+    /* ------------- */
+    .program__title {
+        text-align: center;
+    }
+
+    .program__top {
+        align-items: center;
+        text-align: center;
+    }
+
+    .tab-controls {
+        justify-content: center;
     }
 }
 
