--- a/maket_№3_Wake&Bake/css/style.css
+++ b/maket_№3_Wake&Bake/css/style.css
@@ -1,477 +1,13 @@
-:root {
-    --color-ac-orange: #FFA55C;
-    --color-ac-pink: #CEAAD0;
-    --color-bg-button: #FFE0CB;
-    --color-body: #FFF9F4;
-    --color-bg-img: #704174;
-    --color-bg-disable: #E1D9E1;
-    --color-bg-inputs: #AC907A;
-    --color-text-head: #1F1711;
-    --color-text: #312C27;
+@import "fonts.css";
+@import "reset.css";
+@import "global.css";
 
-    --font-family: "Montserrat", sans-serif;
-    --second-family: "Gabriola", sans-serif;
-    --third-family: "Inspiration", sans-serif;
+@import "header.css";
+@import "footer.css";
+@import "media.css";
 
-    --transition: all .4s;
-    --border-radius: 20px;
-}
+/* :no-button */
 
-
-/* ========================= */
-.body {
-    /* font-family: "Montserrat", "Arial", sans-serif; */
-    font-family: var(--font-family);
-    background: var(--color-body);
-    /* font-size: 16px; дефолтное значение */
-    /* font-weight: 400; Дефолтное значение */
-    line-height: 1.5;
-    color: var(--color-text);
-}
-
-.body--opened-menu {
-    overflow: hidden;
-}
-
-.body--opened-modal {
-    overflow: hidden;
-}
-
-.wraper {
-    min-height: 100%;
-    width: 100%;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-}
-
-.main {
-    flex-grow: 1;
-}
-
-.main__about {
-    padding: 140px 0;
-}
-
-.main__program {
-    padding-bottom: 145px;
-}
-
-.container {
-    max-width: 1310px;
-    padding: 0 15px;
-    margin: 0 auto;
-    height: 100%;
-    line-height: 24px;
-}
-
-.title {
-    font-family: var(--second-family);
-    font-size: 74px;
-    line-height: .82;
-    color: var(--color-text-head);
-}
-
-.button {
-    width: 100%;
-    display: flex;
-    font-weight: 500;
-    line-height: 1.6;
-    align-items: center;
-    justify-content: center;
-    /* max-width: 358px; */
-    height: 62px;
-    background: var(--color-ac-orange);
-    border-radius: 60px;
-    padding: 3px 15px;
-}
-
-.button:hover {
-    background: #ff9138;
-    transition: var(--transition);
-}
-
-/* ====================_modal-window-to-about_================ */
-.modal {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    inset: 0;
-    z-index: 10;
-    background: #00000070;
-
-    opacity: 0;
-    visibility: hidden;
-    transition: all .6s;
-    padding: 15px;
-}
-
-.body--opened-modal .modal {
-    opacity: 1;
-    visibility: visible;
-    /* transition: var(--transition); */
-}
-
-.modal--opened {}
-
-.modal__window {
-    background: var(--color-body);
-    max-width: 428px;
-    padding: 0 60px 60px;
-    border-radius: var(--border-radius);
-    position: relative;
-}
-
-.modal__cancel {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    transition: all .4s;
-}
-
-.modal__cancel:hover path,
-.modal__cancel:hover rect {
-    stroke: #AC907A;
-}
-
-.modal__img {
-    margin: -65px 0 15px 13px;
-    max-width: 100%;
-}
-
-.modal__title {
-    /* font-family: var(--second-family); */
-    font-size: 42px;
-    line-height: .9;
-    /* color: var(--color-text-head); */
-    margin-bottom: 10px;
-}
-
-.modal__text {
-    margin-bottom: 30px;
-}
-
-.modall__form {}
-
-.modal__form-label {
-    margin-bottom: 10px;
-}
-
-.field {
-    display: block;
-    position: relative;
-}
-
-.field span {
-    position: absolute;
-    top: 12px;
-    left: 28px;
-    font-size: 11px;
-    color: #AC907A;
-    opacity: 0;
-    visibility: hidden;
-    transition: var(--transition);
-
-}
-
-.field__input {
-    display: block;
-    width: 100%;
-    border: 1px solid #AC907A;
-    border-radius: 100px;
-    padding: 19px 41px 19px 28px;
-    background: transparent;
-    font-size: 16px;
-
-    transition: var(--transition);
-}
-
-.field__input:hover {
-    border-color: var(--color-ac-orange);
-}
-
-.field__input::placeholder {
-    color: #AC907A;
-    transition: var(--transition);
-}
-
-.field__input:hover::placeholder {
-    color: var(--color-ac-orange);
-}
-
-.field__input:focus {
-    padding: 26px 42px 12px 28px;
-}
-
-.field__input:focus+span {
-    /* padding: 26px 42px 12px 28px; */
-    opacity: 1;
-    visibility: visible;
-}
-
-
-.button {}
-
-/* ========================================= */
-
-.header {
-    position: relative;
-    background: url("../img/decor/bg-header.png") 50% 100% / cover no-repeat;
-}
-
-/* .header__bg-image {
-    position: absolute;
-    z-index: -1;
-} */
-
-.header__top {
-    padding-top: 19px;
-}
-
-.header__top-inner {
-    display: flex;
-    justify-content: space-between;
-    /* align-items: center; */
-    align-items: flex-end;
-}
-
-.header__logo {
-    max-width: 174px;
-    z-index: 11;
-}
-
-.header__logo img {
-    width: 100%;
-}
-
-.header__nav {}
-
-.header__nav-list {
-    display: flex;
-    gap: 4vh 40px;
-}
-
-.header__nav-link {
-    display: block;
-    padding: 5px 0;
-    position: relative;
-    z-index: 1;
-}
-
-/* .header__nav-link:hover {} */
-
-.header__nav-link::before {
-    content: '';
-    position: absolute;
-    background: var(--color-ac-orange);
-    top: -8px;
-    left: -14px;
-    z-index: -1;
-    width: 34px;
-    height: 34px;
-    border-radius: 50%;
-    transition: var(--transition);
-    opacity: 0;
-}
-
-.header__nav-link:hover::before {
-    opacity: 1
-}
-
-.burger-icon {
-    display: none;
-    width: 50px;
-    height: 50px;
-    /* background: #1F1711; */
-    align-items: center;
-    justify-content: center;
-    z-index: 11;
-}
-
-.burger-icon span,
-.burger-icon span::before,
-.burger-icon span::after {
-    display: block;
-    width: 30px;
-    height: 3px;
-    border-radius: 100px;
-    background: var(--color-text);
-    transition: var(--transition);
-}
-
-.burger-icon span {
-    position: relative;
-}
-
-.burger-icon span::before,
-.burger-icon span::after {
-    content: '';
-    position: absolute;
-}
-
-.burger-icon span::before {
-    top: -8px;
-}
-
-.burger-icon span::after {
-    bottom: -8px;
-}
-
-.body--opened-menu .burger-icon span {
-    background: transparent;
-}
-
-.body--opened-menu .burger-icon span::before {
-    top: 0;
-    transform: rotate(45deg);
-}
-
-.body--opened-menu .burger-icon span::after {
-    bottom: 0;
-    transform: rotate(-45deg);
-}
-
-.header__hero {
-    padding: 50px 0 140px;
-}
-
-/* ================================================= */
-.hero {
-    padding: 50px 0 140px;
-}
-
-.hero-inner {
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    gap: 30px;
-}
-
-.hero__content {
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* padding-right: 137px; */
-    max-width: 5var(--border-radius);
-    /* width: 100%; */
-}
-
-.hero__info {
-    display: flex;
-    flex-wrap: wrap;
-    line-height: 1.6;
-    color: #B197B2;
-    text-transform: uppercase;
-    margin-bottom: var(--border-radius);
-}
-
-.hero__info span {
-    display: flex;
-    align-items: center;
-}
-
-.hero__info span::after {
-    content: '';
-    background-color: #B197B2;
-    width: 4px;
-    height: 4px;
-    border-radius: 50%;
-    display: block;
-    margin: 0 10px;
-}
-
-.hero__info span:last-child::after {
-    content: none;
-}
-
-.point {
-    background-color: #B197B2;
-    width: 4px;
-    height: 4px;
-    border-radius: 50%;
-}
-
-.hero__title {
-    margin-bottom: 30px;
-}
-
-.hero__text {
-    margin-bottom: 40px;
-    max-width: 360px;
-}
-
-.hero__button {
-    max-width: 360px;
-    width: 100%;
-}
-
-.hero__img {
-    /* padding-left: 137px; */
-    margin-right: 247px;
-    position: relative;
-}
-
-.hero__img>img {
-    max-width: 100%;
-}
-
-.hero__img-control {
-    display: flex;
-    gap: 10px;
-    position: absolute;
-    align-items: center;
-    left: calc(100% - 39px);
-    bottom: 11%;
-    max-width: 200px;
-    width: 100%;
-    text-align: left;
-    /* translate: 39px -51px; */
-}
-
-.hero__img-control--mobile {
-    display: none;
-}
-
-.hero__img-button {
-    display: flex;
-    flex-shrink: 0;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--color-bg-button);
-    box-shadow: 0 4px var(--border-radius) 0 #b8947e4d;
-    width: 78px;
-    height: 78px;
-    border-radius: 50%;
-    position: relative;
-}
-
-.hero__img-button img {
-    padding-left: 8.8%;
-}
-
-.hero__img-button::before {
-    content: '';
-    position: absolute;
-    border: 1px solid var(--color-ac-orange);
-    inset: 5px;
-    border-radius: 50%;
-    opacity: 0;
-    transition: var(--transition);
-}
-
-.hero__img-button:hover::before {
-    opacity: 1;
-}
-
-
-/* ============================================================= */
-/* ====================================== */
-/* ============main====================== */
-
-.main {
-    background: var(--color-body);
-    /* margin-top: 140px; */
-}
 
 .about__inner {
     display: grid;
@@ -493,7 +29,6 @@
     height: 100%;
     object-fit: cover;
     object-position: 0% 50%;
-
 }
 
 .about__img-contol {
@@ -538,15 +73,8 @@
     opacity: 1;
 }
 
-
 .about__heading {
     margin-bottom: 30px;
-}
-
-.about__title {}
-
-.about__text {
-    /* margin-bottom: 40px; */
 }
 
 .about__grid {
@@ -581,8 +109,6 @@
 
 /* ================================================ */
 /* ====================_Program_=================== */
-
-.program {}
 
 .program__title {
     margin-bottom: 20px;
@@ -622,8 +148,6 @@
     width: 100%;
 }
 
-.program__action:last-child {}
-
 .program__discount {
     font-size: 20px;
     background-color: var(--color-bg-button);
@@ -631,8 +155,6 @@
     padding: 40px;
     grid-row: 1/3;
 }
-
-.program__discount:first-child {}
 
 .program__discount-value {
     font-family: var(--second-family);
@@ -650,7 +172,6 @@
         transform: scale(1);
         color: var(--color-ac-orange);
     }
-
     100% {
         transform: translateX(3%) scale(1.1);
         /* font-size: 82px; */
@@ -698,8 +219,6 @@
     gap: 26px;
 }
 
-.tab-controls__item {}
-
 .tab-controls__link {
     display: block;
     /* background: var(--color-bg-button); */
@@ -723,7 +242,6 @@
     box-shadow: 0 4px 20px 0 rgba(206, 195, 185, 0);
 }
 
-
 .tab-content {
 
     display: none;
@@ -732,11 +250,6 @@
 .tab-content--show {
     display: block;
 
-}
-
-/* ------------------- */
-.accordion-list {
-    /* margin-bottom: 20px; */
 }
 
 .accordion-list__item {
@@ -764,10 +277,6 @@
     line-height: .9;
     color: var(--color-text-head);
     transition: var(--transition);
-}
-
-.accordion-list__control-title {
-    /* display: inline-block; */
 }
 
 .accordion-list__item--opened .accordion-list__control {
@@ -812,8 +321,6 @@
     fill: var(--color-body);
 }
 
-
-
 /* -------------------------- */
 .accordion-list__content {
     max-height: 0;
@@ -844,8 +351,6 @@
     margin-bottom: 20px;
 }
 
-.accordion-content__list {}
-
 .accordion-content__item {
     display: flex;
     margin-bottom: 20px;
@@ -875,15 +380,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
 /* -----main__bottom----- */
 .main__bottom {
     padding-bottom: 60px;
@@ -902,14 +398,6 @@
     padding: 127px 0 137px;
     align-items: flex-end;
     justify-content: space-between;
-}
-
-/* .footer__image{
-    padding-right: 204px;
-} */
-
-.main__bottom-inner .cake {
-    /* max-width: 574px; */
 }
 
 .form {
