--- a/maket_№3_Wake&Bake/css/media.css
+++ b/maket_№3_Wake&Bake/css/media.css
@@ -102,6 +102,16 @@
     }
 
 
+    .gallery__inner{
+        grid-template:none;
+    }
+    .gallery_info{
+        max-width: none;
+    }
+    .gallery__img{
+        display: none;
+    }
+
     /* ========== */
     .footer__inner {
         justify-content: center;
