--- a/maket_№3_Wake&Bake/css/global.css
+++ b/maket_№3_Wake&Bake/css/global.css
@@ -58,6 +58,9 @@
 .main__program {
     padding-bottom: 145px;
 }
+.main__gallery {
+    padding-bottom: 145px;
+}
 
 .container {
     max-width: 1310px;
