--- a/maket_№3_Wake&Bake/css/style.css
+++ b/maket_№3_Wake&Bake/css/style.css
@@ -172,6 +172,7 @@
         transform: scale(1);
         color: var(--color-ac-orange);
     }
+
     100% {
         transform: translateX(3%) scale(1.1);
         /* font-size: 82px; */
@@ -377,6 +378,109 @@
     max-width: 274px;
 }
 
+/* -----Gallery------- */
+.gallery {}
+
+.gallery__inner {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 32px;
+    margin-bottom: 40px;
+}
+
+.gallery__img {
+    justify-self: center;
+    align-items: center;
+}
+
+.gallery__img img {
+    max-width: 100%;
+}
+
+.gallery__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+    gap: 15px;
+}
+
+.gallery_info {
+    max-width: 380px;
+}
+
+.gallery_title {
+    font-family: var(--second-family);
+    font-size: 74px;
+    line-height: .82;
+    padding: 26px 0 20px;
+}
+
+.gallery__text {}
+
+.gallery_nav {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    font-family: var(--second-family);
+    font-size: 42px;
+    line-height: .9;
+}
+.gallery_nav--mobile{
+    display: none;
+}
+
+.gallery__prev,
+.gallery__next {
+    cursor: pointer;
+    background: transparent;
+    border-radius: 50%;
+    border: 1.50px solid var(--color-ac-orange);
+    flex-shrink: 0;
+    width: 36px;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: var(--transition);
+}
+
+.gallery__prev path,
+.gallery__next path {
+    transition: var(--transition);
+}
+
+.gallery__prev:hover,
+.gallery__next:hover {
+    background: var(--color-ac-orange);
+}
+
+.gallery__prev:hover path,
+.gallery__next:hover path{
+    fill: var(--color-body);
+}
+
+.gallery__prev {}
+
+.gallery__pagination {
+    display: flex;
+}
+
+.gallery__next {
+    /* border-radius: 100px;
+    border: 1.50px solid var(--color-ac-orange); */
+}
+
+.gallery__slider {}
+
+.gallery__wrapper {}
+
+.gallery__slide {
+    border-radius: var(--border-radius);
+    overflow: hidden ;
+}
+.gallery__slide img{
+    width: 100%;
+}
 
 
 
