--- a/maket_№3_Wake&Bake/css/style.css
+++ b/maket_№3_Wake&Bake/css/style.css
@@ -4,7 +4,7 @@
 
 @import "header.css";
 @import "footer.css";
-@import "media.css";
+/* @import "media.css"; */
 
 /* :no-button */
 
@@ -401,7 +401,7 @@
     display: flex;
     justify-content: space-between;
     align-items: end;
-    gap: 15px;
+    gap: 30px 15px;
 }
 
 .gallery_info {
@@ -425,7 +425,8 @@
     font-size: 42px;
     line-height: .9;
 }
-.gallery_nav--mobile{
+
+.gallery_nav--mobile {
     display: none;
 }
 
@@ -444,6 +445,27 @@
     transition: var(--transition);
 }
 
+.swiper-button-disabled.gallery__prev,
+.swiper-button-disabled.gallery__next {
+    border: 1.50px solid #E1D9E1;
+    cursor: auto;
+}
+
+.swiper-button-disabled.gallery__prev path,
+.swiper-button-disabled.gallery__next path {
+    fill: #E1D9E1;
+}
+
+.swiper-button-disabled.gallery__prev:hover,
+.swiper-button-disabled.gallery__next:hover {
+    background: transparent;
+}
+
+.swiper-button-disabled.gallery__prev:hover path,
+.swiper-button-disabled.gallery__next:hover path {
+    fill: #E1D9E1;
+}
+
 .gallery__prev path,
 .gallery__next path {
     transition: var(--transition);
@@ -455,7 +477,7 @@
 }
 
 .gallery__prev:hover path,
-.gallery__next:hover path{
+.gallery__next:hover path {
     fill: var(--color-body);
 }
 
@@ -476,9 +498,10 @@
 
 .gallery__slide {
     border-radius: var(--border-radius);
-    overflow: hidden ;
+    overflow: hidden;
 }
-.gallery__slide img{
+
+.gallery__slide img {
     width: 100%;
 }
 
@@ -551,4 +574,347 @@
 .form__button {
     margin-top: var(--border-radius);
     /* max-width: 4var(--border-radius); */
+}
+
+
+
+
+@media(max-width:1200px) {
+    .hero__img {
+        margin: 0;
+        max-width: 377px;
+    }
+
+    .hero__img-control {
+        position: static;
+        max-width: none;
+        margin-top: 30px;
+    }
+
+    /* ---------------- */
+    .program__top {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .tab-controls {
+        flex-wrap: wrap;
+    }
+
+    .footer__inner {
+        justify-content: space-between;
+        grid-template: repeat(2, auto) / repeat(3, auto);
+    }
+
+    .footer__col:last-child {
+        grid-column: 1 / -1;
+        text-align: center;
+    }
+}
+
+@media(max-width:1100px) {
+    .about__body {
+        align-self: center;
+    }
+
+    .about__img {
+        grid-row: auto;
+    }
+
+    .about__grid {
+        grid-column: 1/-1;
+    }
+}
+
+@media(max-width:1000px) {
+    .accordion-list__control {
+        padding: 25px 30px;
+        font-size: 35px;
+    }
+
+    .accordion-content {
+        gap: 30px;
+    }
+}
+
+@media(max-width:900px) {
+    .header__nav {
+        /* display: none; */
+        position: fixed;
+        inset: 0;
+        z-index: 10;
+        background: var(--color-body);
+        padding: 26vh 15px 30px;
+        font-size: 24px;
+
+        transform: translateY(-50%);
+        opacity: 0;
+        visibility: hidden;
+        transition: var(--transition);
+    }
+
+    .header__nav-list {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .body--opened-menu .header__nav {
+        /* display: block; */
+        transform: translateY(0%);
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .burger-icon {
+        display: flex;
+    }
+
+    /* ------------------------ */
+    .program__action {
+        max-width: none;
+        grid-template: repeat(3, auto) / minmax(280px, 1fr) 1fr;
+        max-width: 500px;
+        gap: 40px;
+        flex-shrink: 0;
+        width: 100%;
+    }
+
+    .program__price-img {
+        display: none;
+    }
+
+
+    .gallery__inner {
+        grid-template: none;
+    }
+
+    .gallery_info {
+        max-width: none;
+    }
+
+    .gallery__img {
+        display: none;
+    }
+
+    /* ========== */
+    .footer__inner {
+        justify-content: center;
+        grid-template: none;
+        text-align: center;
+        gap: 0;
+    }
+
+    .footer__col:first-child {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 40px;
+    }
+
+    .footer__col:nth-child(2) {
+        margin-bottom: 40px;
+    }
+
+    .footer__col:nth-child(3) {
+        margin-bottom: 10px;
+    }
+
+
+
+}
+
+@media(max-width:800px) {
+    .hero__content {
+        max-width: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+    }
+
+    .hero__img {
+        display: none;
+    }
+
+    .hero__img-control--mobile {
+        display: flex;
+        margin: 0 0 30px;
+        width: auto;
+    }
+
+    /* ----------------------- */
+    .about__inner {
+        grid-template: none;
+    }
+
+    .about__img {
+        max-width: 500px;
+        justify-self: center;
+    }
+
+    .about__body {
+        text-align: center;
+    }
+
+    .about__grid {
+        grid-template: none;
+    }
+
+    /* ---------- */
+    .tab-controls {
+        gap: 10px;
+    }
+
+    .tab-controls-link {
+        padding: 6px 20px;
+    }
+
+    .accordion-content {
+        gap: 30px;
+        flex-direction: column;
+    }
+
+    .accordion-content__col:first-child {
+        max-width: none;
+    }
+
+    .accordion-content__text {
+        max-width: none;
+    }
+}
+
+@media(max-width:600px) {
+
+    .main__about {
+        padding: 60px 0 80px;
+    }
+
+    .main__program,
+    .main__gallery {
+        padding: 0 0 80px;
+    }
+
+    .title {
+        font-size: 12vw;
+    }
+
+    /* -------------- */
+    .header__hero {
+        padding-bottom: 80px;
+    }
+
+    .hero__title {
+        font-size: 12vw;
+        /* ------------------------- */
+    }
+
+    .about__grid {
+        gap: 15px;
+    }
+
+    .about__grid-item {
+        padding: 10px 15px;
+    }
+
+    .about__img-contol {
+        left: 0;
+        bottom: 0;
+        right: 0;
+        max-width: none;
+        border-radius: 0;
+        padding: 10px 15px;
+    }
+
+    /* ------------- */
+    .program__title {
+        text-align: center;
+    }
+
+    .program__top {
+        align-items: center;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .program__action {
+        grid-template: repeat(3, auto) /auto auto;
+        gap: 15px;
+    }
+
+    .program__discount {
+        grid-column: 1/-1;
+        grid-row: auto;
+        justify-self: center;
+    }
+
+    /* ---------------------- */
+    .tab-controls {
+        justify-content: center;
+    }
+
+    .accordion-list__item {
+        margin-bottom: 10px;
+    }
+
+    .accordion-list__control {
+        padding: 17px 30px;
+        font-size: 28px;
+    }
+
+    .accordion-list__control-icon {
+        width: 26px;
+        height: 26px;
+    }
+
+    .accordion-list__control-icon svg {
+        width: 10px;
+    }
+
+    /* _____________________ */
+    .gallery__content {
+        flex-direction: column;
+        /* padding: 0 10px 0; */
+        /* align-items: center; */
+        /* margin-bottom: 20px; */
+    }
+
+    .gallery__inner {
+        margin-bottom: 20px;
+    }
+
+}
+
+@media(max-width:450px) {
+    .modal__img {
+        width: 50%;
+        margin-top: -45px;
+    }
+
+    .modal__title {
+        font-size: 35px;
+    }
+
+    .modal__window {
+        padding: 0 15px 45px;
+    }
+
+
+    .program__action {}
+
+    .program__price {
+        text-align: center;
+    }
+
+    .accordion-list__control {
+        padding: 17px 15px;
+    }
+
+    .accordion-content {
+        padding: 0 15px 30px;
+    }
+
+    .accordion-content__item {
+        margin-bottom: 10px;
+    }
 }
