--- a/maket_№3_Wake&Bake/css/global.css
+++ b/maket_№3_Wake&Bake/css/global.css
@@ -56,7 +56,8 @@
 }
 
 .main__program,
-.main__gallery {
+.main__gallery,
+.main__testimonials {
     padding-bottom: 145px;
 }
 /* .main__gallery {
