--- a/maket_№3_Wake&Bake/css/style.css
+++ b/maket_№3_Wake&Bake/css/style.css
@@ -1065,6 +1065,8 @@
     }
 
     /* ------------------------- */
+    /* ------------------------- */
+    /* ------------------------- */
 
     .testimonials__inner{
         margin-bottom: 20px;
@@ -1115,3 +1117,5 @@
         padding: 30px 10px;
     }
 }
+
+
