--- a/maket_№3_Wake&Bake/css/style.css
+++ b/maket_№3_Wake&Bake/css/style.css
@@ -694,6 +694,10 @@
     justify-content: space-between;
 }
 
+    .main__contact-image{
+        position: relative;
+    }
+
 .form {
     max-width: 420px;
     /* width: 100%; */
