--- a/maket_№3_Wake&Bake/css/style.css
+++ b/maket_№3_Wake&Bake/css/style.css
@@ -62,7 +62,7 @@
 .about__img-button::before {
     content: '';
     position: absolute;
-    border: 1px solid #CEAAD0;
+    border: 1px solid var(--color-ac-pink);
     inset: 5px;
     border-radius: 50%;
     opacity: 0;
@@ -523,14 +523,16 @@
     margin-bottom: 40px;
     gap: 30px;
 }
+
 .testimonials__info {
     max-width: 632px;
 }
+
 .testimonials__title {
     margin-bottom: 20px;
 }
 
-.testimonials__nav{
+.testimonials__nav {
     display: flex;
     align-items: center;
     gap: 30px;
@@ -577,7 +579,7 @@
 
 /* ----------------- */
 
-.testimonials__slider{
+.testimonials__slider {
     overflow: visible;
 }
 
@@ -585,7 +587,7 @@
     margin-bottom: 40px;
 }
 
-.testimonials__slide{
+.testimonials__slide {
     display: flex;
     background-color: var(--color-bg-button);
     border-radius: var(--border-radius);
@@ -596,19 +598,21 @@
     opacity: 0.5;
     height: auto;
 }
-.swiper-slide-prev.testimonials__slide{
+
+.swiper-slide-prev.testimonials__slide {
     opacity: .5;
 }
-.swiper-slide-next.testimonials__slide{
+
+.swiper-slide-next.testimonials__slide {
     opacity: .5;
 }
 
 
-.testimonials__slide.swiper-slide{
+.testimonials__slide.swiper-slide {
     transform: scale(0.9);
 }
 
-.swiper-slide-active.testimonials__slide{
+.swiper-slide-active.testimonials__slide {
     transform: scale(1);
     opacity: 1;
 }
@@ -624,30 +628,36 @@
     flex-shrink: 0;
     text-align: center;
 }
-.testimonials__student-img{
+
+.testimonials__student-img {
     margin-bottom: 20px;
     border-radius: 18px;
     overflow: hidden;
 }
+
 .testimonials__student-img>img {
     width: 100%;
 }
+
 .testimonials__student-name {
     line-height: 1.6;
     text-transform: uppercase;
     color: var(--color-text-head);
     margin-bottom: 5px;
 }
+
 .testimonials__student-inst {
     /* display: flex; */
     gap: 5px;
     color: var(--color-ac-pink);
 }
-.testimonials__student-inst span{
+
+.testimonials__student-inst span {
     color: var(--color-ac-pink);
 }
-.testimonials__quote {
-}
+
+.testimonials__quote {}
+
 .testimonials__quote span {
     display: block;
     font-family: var(--second-family);
@@ -657,135 +667,185 @@
     margin-bottom: 10px;
 }
 
-.testimonials__scrollbar{
+.testimonials__scrollbar {
     background: var(--color-bg-button);
 }
 
-.testimonials__scrollbar.swiper-scrollbar{
+.testimonials__scrollbar.swiper-scrollbar {
     position: static;
     width: 100%;
     height: 7px;
 }
 
-.testimonials__scrollbar .swiper-scrollbar-drag{
+.testimonials__scrollbar .swiper-scrollbar-drag {
     background: var(--color-ac-orange);
 }
 
 
 /* -----main__contact----- */
 
-.main__contact {
+/* .main__contact {
     padding-bottom: 60px;
-}
+} */
 
-.main__contact {
-    position: relative;
-    background: url("../img/decor/bg-footer.png") 50% 100% / cover no-repeat;
+.contact {
+    /* position: relative; */
+    background: url("../img/decor/bg-contact.png") 50% 0% / cover no-repeat;
+    padding: 140px 0;
     /* width: 100%; */
 }
 
-.main__contact-inner {
+.contact__inner {
     /* width: 1282px;
     height: 522px; */
     display: flex;
     gap: 84px;
-    padding: 140px 0 ;
-    align-items: flex-end;
-    justify-content: space-between;
+    align-items: end;
+    position: relative;
 }
 
-    .main__contact-image{
-        position: relative;
-    }
+.contact__inner::before {
+    content: url("../img/decor/berries.png");
+    position: absolute;
+    top: -4%;
+    left: 0%;
+}
 
-.form {
+.contact__inner::after {
+    content: url("../img/decor/berries-2.png");
+    position: absolute;
+    top: 4%;
+    right: 0%;
+}
+
+.contact__img img {
+    width: 100%;
+    filter: drop-shadow(0 4px 30px 0 #c6b0a14d);
+}
+
+.contact__body {
     max-width: 420px;
     /* width: 100%; */
-    margin-right: 204px;
+    /* margin-right: 204px; */
 }
 
-.form-title {
-    font-family: var(--second-family);
-    font-size: 74px;
-    line-height: .82;
-    color: var(--color-text-head);
-    padding-bottom: var(--border-radius);
+.contact__title {
+    margin-bottom: 20px;
 }
 
-.form-text {
-    padding-bottom: var(--border-radius);
+.contact__text {
+    margin-bottom: 40px;
 }
 
-.form__input {
-    border: 1px solid #AC907A;
-    border-radius: 100px;
-    padding: 19px 28px;
-    width: 420px;
-    height: 62px;
+.contact__form {}
+
+.contact__label {
     margin-bottom: 10px;
-    background-color: transparent;
 }
 
-.form__checkbox{
-    appearance: none; /* Убираем стандартный стиль */
+.contact__input {
+    display: block;
+    width: 100%;
+    border: 1px solid var(--color-bg-inputs);
+    border-radius: 100px;
+    padding: 19px 41px 19px 28px;
+    background: transparent;
+    font-size: 16px;
+    margin-bottom: 20px;
+
+    transition: var(--transition);
+}
+
+.contact__input:hover {
+    border-color: var(--color-ac-orange);
+}
+
+.contact__input::placeholder {
+    color: var(--color-bg-inputs);
+    transition: var(--transition);
+}
+
+.contact__input:hover::placeholder {
+    color: var(--color-ac-orange);
+}
+
+.contact__check-label {
+    /* font-size: 13px; */
+    display: flex;
+    align-items: start;
+    gap: 5px;
+    max-width: 288px;
+    font-size: 13px;
+    margin-bottom: 20px;
+}
+
+.contact__check-label p {}
+
+.contact__check-label a {
+    text-decoration: underline;
+    transition: var(--transition);
+}
+
+.contact__check-label a:hover {
+    color: var(--color-ac-orange);
+}
+
+
+.contact__checkbox {
+    appearance: none;
+    /* Убираем стандартный стиль */
     background-color: transparent;
     width: 16px;
     height: 16px;
-    /* border: 2px solid #ccc; */
-    border: 1.50px solid #AC907A;
-    /* background-color: #f0f0f0;  */
+    border: 1.5px solid var(--color-bg-inputs);
     border-radius: 4px;
     cursor: pointer;
+    flex-shrink: 0;
     position: relative;
     transition: var(--transition);
 }
 
-.form__checkbox:hover{
+.contact__checkbox::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: url('../img/icons/check.svg')50% 50% no-repeat;
+    opacity: 0;
+
+}
+
+.contact__checkbox:hover {
     border: 1.50px solid var(--color-ac-orange)
 }
 
-.form__checkbox:checked{
-    background-color: var(--color-ac-orange); /* Цвет фона при выборе */
-    border-color: var(--color-ac-orange);
+.contact__checkbox:checked {
+    background: var(--color-ac-orange);
+    border: 1.50px solid var(--color-ac-orange)
+        /* Цвет фона при выборе */
+        /* border: var(--color-ac-orange); */
 }
-.form__checkbox:checked::after{
-    /* content: "✓"; 
-    color: white; 
-    font-size: 16px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
-    content: "";
+
+.contact__checkbox:checked::before {
+    opacity: 1;
+}
+
+
+/* .contact__checkbox:checked::after {
+content: "";
     display: block;
     width: 10px;
     height: 10px;
-    /* background-image: url('data:image/svg+xml;utf8,<svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3.99062 6.15294C3.90311 6.15311 3.81642 6.13601 3.73554 6.1026C3.65466 6.0692 3.58116 6.02015 3.51928 5.95827L0.691285 3.1296C0.627569 3.06815 0.57673 2.99462 0.541735 2.91331C0.506739 2.832 0.488287 2.74454 0.487456 2.65602C0.486625 2.5675 0.503431 2.4797 0.536894 2.39775C0.570356 2.31579 0.619805 2.24133 0.682356 2.17869C0.744906 2.11605 0.819305 2.06649 0.901211 2.03291C0.983117 1.99934 1.07089 1.98241 1.15941 1.98311C1.24793 1.98382 1.33542 2.00215 1.41678 2.03703C1.49814 2.07191 1.57174 2.12264 1.63328 2.18627L3.98995 4.54294L8.23328 0.300937C8.35829 0.175843 8.52787 0.105531 8.70471 0.105469C8.88156 0.105406 9.05119 0.175598 9.17628 0.300604C9.30138 0.425609 9.37169 0.595188 9.37175 0.772035C9.37181 0.948882 9.30162 1.11851 9.17662 1.2436L4.46195 5.95827C4.40007 6.02015 4.32658 6.0692 4.2457 6.1026C4.16481 6.13601 4.07813 6.15311 3.99062 6.15294Z" fill="#FFF9F4"/></svg>'); */
-    background-image: url('../img/icons/check.svg');
+background-image: url('../img/icons/check.svg');
     background-repeat: no-repeat;
     position: absolute;
     top: 65%;
     left: 57%;
     transform: translate(-50%, -50%);
-}
-
-.form__checkbox p {
-    font-size: 13px;
-
-}
-
-.form__checkbox-link {
-    text-decoration: underline;
-    text-decoration-skip-ink: auto;
-}
-
-/* .form__form:last-child {
-    margin-bottom: var(--border-radius);
 } */
 
 
-.form__button {
-    margin-top: var(--border-radius);
+.contact__button {
+    /* margin-top: var(--border-radius); */
     /* max-width: 4var(--border-radius); */
 }
 
@@ -814,6 +874,13 @@
         flex-wrap: wrap;
     }
 
+    /* -------------------- */
+    
+    .contact__inner::after {
+        /* position: absolute; */
+        top: -20%;
+    }
+
     .footer__inner {
         justify-content: space-between;
         grid-template: repeat(2, auto) / repeat(3, auto);
@@ -836,6 +903,11 @@
 
     .about__grid {
         grid-column: 1/-1;
+    }
+    /* --------------- */
+    .contact__inner{
+        align-items: center;
+        gap: 30px;
     }
 }
 
@@ -909,6 +981,22 @@
         display: none;
     }
 
+    /*---------------------------*/
+
+    .testimonials__scrollbar.swiper-scrollbar {
+        width: 50%;
+        margin: 0 auto;
+    }
+
+    /* ----------------------- */
+    .contact__inner{
+        justify-content: center;
+    }
+    .contact__img{
+        display: none;
+    }
+    
+
     /* ========== */
     .footer__inner {
         justify-content: center;
@@ -932,12 +1020,8 @@
         margin-bottom: 10px;
     }
 
-    /* ____________________ */
 
-    .testimonials__scrollbar.swiper-scrollbar{
-        width: 50%;
-        margin: 0 auto;
-    }
+
 }
 
 @media(max-width:800px) {
@@ -1007,8 +1091,13 @@
         align-items: stretch;
     }
 
-    .testimonials__nav{
+    .testimonials__nav {
         align-self: end;
+    }
+
+    /* ------ */
+    .contact__inner::before{
+        content: none;
     }
 }
 
@@ -1116,12 +1205,22 @@
     /* ------------------------- */
     /* ------------------------- */
 
-    .testimonials__inner{
+    .testimonials__inner {
         margin-bottom: 20px;
     }
-    .testimonials__slide{
+
+    .testimonials__slide {
         flex-direction: column;
         align-items: center;
+        text-align: center;
+    }
+
+    /* ------------ */
+    .contact{
+        padding-bottom: 80px;
+    }
+    .contact__title,
+    .contact__text{
         text-align: center;
     }
 
@@ -1161,9 +1260,7 @@
     }
 
     /* ----------------- */
-    .testimonials__slide{
+    .testimonials__slide {
         padding: 30px 10px;
     }
 }
-
-
