--- a/maket_№4-shop-cros/css/style.css
+++ b/maket_№4-shop-cros/css/style.css
@@ -11,19 +11,18 @@
 
 .header {
     /* display: flex; */
-    position: relative;
+    /* position: relative; */
     /* background: url("../img/decor/footer_sneakers.png") 50% 100% / cover no-repeat; */
     background: linear-gradient(209deg, #de343d 0%, #ffb800 100%);
-    width: 1920px;
-    height: 1065px;
-    z-index: -1;
+
+    /* opacity: 1; */
+    /* width: 1920px; */
+    /* height: 1065px; */
+    /* z-index: -1; */
 }
 
 .header__top {
-    /* position: absolute;
-    z-index: 2; */
     background-color: var(--color-body);
-    /* margin: 0 130px;  */
 }
 
 .header__inner {
@@ -33,27 +32,33 @@
     align-items: center;
     padding: 29px 0;
     text-transform: uppercase;
+    color: #000;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2.13;
 }
 
 .header__nav {
     grid-column: 1 / -2;
-    color: #000;
     display: flex;
-    gap: 41.28px;
+    gap: 10px;
+    align-items: center;
 }
 
 .header__item {
-    /* font-family: var(--font-family); */
+    margin: 0 16px;
+}
+
+.header__item:first-child {
     font-weight: 800;
-    font-size: 12px;
-    line-height: 213%;
-    /* letter-spacing: 0.07em; */
-    color: #000;
 }
 
 .header__search {
     display: flex;
     gap: 10px;
+    align-items: center;
+    padding: 1vh 0;
+    background: transparent;
 }
 
 /* ------------- */
@@ -62,24 +67,89 @@
 }
 
 .header__hero-title {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    position: absolute;
-    /* font-family: var(--); */
+    /* grid-column: 1/ -1; */
+    display: flex;
+    justify-content: center;
+
+    margin-top: 150px;
     font-weight: 400;
     font-size: 382px;
     letter-spacing: -0.07em;
     color: #ffffff24;
-    gap: 50px;
     background: transparent;
     text-transform: uppercase;
-    left: -7vw;
-    top: 30vh;
 }
 
-.header__swiper {
+.header__hero-bottom {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: end;
+    justify-items: center;
+    /* margin-bottom: 80px; */
+}
+
+.header__button-pay {
+    grid-column: -2/ -1;
+    display: flex;
+    border: 1.56px solid #fff;
+    color: #fff;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 2.56%;
+    letter-spacing: 0.08em;
+    padding: 6px 24px;
+    width: 196px;
+    height: 65px;
+    background: transparent;
+    /* margin: 0 260px 80px 0; */
+    margin-bottom: 80px;
+    align-items: center;
+}
+
+/* ------------------------------------- */
+.header__slider {
     position: absolute;
-    /* z-index: 5; */
-    left: 28%;
-    top: 19vh;
+    /* z-index: 10; */
+    top: -15%;
+    left: 29.6%;
+    width: 100%;
+    /* height: 80vh; */
+}
+
+.header__pagination.swiper-pagination {
+    position: absolute;
+    top: 39%;
+    left: 2%;
+    /* transform: translateY(-50%); */
+    display: flex;
+    flex-direction: column;
+    gap: 42px;
+}
+
+.swiper-pagination-bullet {
+    width: 18px;
+    height: 18px;
+    /* background: #ffffff80; */
+    background: transparent;
+    border: 2px solid #ffffff80;
+    opacity: 1;
+    margin: 0 !important;
+}
+
+.swiper-pagination-bullet-active {
+    background: #ffffff80;
+    position: relative;
+    /* border: 1px solid #000; */
+    /* transform: scale(1.2); */
+}
+
+.swiper-pagination-bullet-active::before {
+    content: '';
+    position: absolute;
+    left: 100%;
+    top: 35%;
+    border: 2.00px solid #ffffff7d;
+    width: 50px;
+    height: 0px;
+    /* rotate: (45deg) */
 }
