--- a/maket_№4-shop-cros/css/style.css
+++ b/maket_№4-shop-cros/css/style.css
@@ -71,9 +71,13 @@
 .filters:hover,
 .sort:hover {
     border-color: var(--color-red);
+    border-radius: 50%;
     color: var(--color-red);
 }
-
+.filters:hover span,
+.sort:hover span {
+    transform: scale(1.1);
+}
 .filters img:hover,
 .sort img:hover {
     border-color: var(--color-red);
@@ -87,58 +91,37 @@
     overflow: hidden;
 }
 
-
-/* .action__icons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 12px 16px;
-    background: transparent;
-    border: 1.6px solid #dedede;
-    border-radius: 4px;
-    height: 51px;
-    overflow: hidden;
-} */
-
 .icon__btn {
     padding: 12px 16px;
     background: transparent;
     border: none;
     border-right: 1.26px solid #dedede;
     /* width: 50%; */
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    /* justify-content: center; */
-    /* cursor: pointer; */
-    /* transition: background 0.2s; */
 }
 
-.icon__btn:last-child{
+.icon__btn:last-child {
     border-right: none;
 }
 
 .icon__btn img {
+    opacity: 0.5;
     width: 25px;
     height: 25px;
-    /* object-fit: contain; */
-    opacity: 0.5;
-    /* серый по умолчанию */
-    /* transition: opacity 0.2s; */
 }
 
-.divider {
-    width: 1.6px;
-    height: 100%;
-    background-color: #dedede;
+.icon__btn:hover img {
+    transform: scale(1.3);
 }
 
-.icon__btn-list {
-    padding: 0 13px 0 20px;
-    /* padding-left: 20px; */
-}
+/* .icon__btn-list {
+    padding: 0 13px 0 20px; */
+/* padding-left: 20px; */
+
 
 .icon__btn-group {
     /* padding: 0 20px 0 13px; */
